--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/vendor
-/composer.lock
+/vendor/
+
+# Build artifacts
+/build/
+
+# Node (if introduced later)
+/node_modules/
+
+# IDE / OS
+.DS_Store
+.idea/
+.vscode/
+
+# Test / tooling caches
+.phpunit.result.cache
