--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.2"
+          # php-scoper (via fidry/filesystem) requires PHP >= 8.3
+          php-version: "8.3"
           tools: composer
 
       - name: Install dependencies
