--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "jiejia/a-ripple-song-podcast",
+  "license": "GPL-3.0-only",
   "type": "wordpress-plugin",
   "require": {
     "php": ">=8.2",
