Add script to remove old versioned zip assets during release process

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,28 @@ jobs:
       - name: Build plugin zip
         run: ARS_DIST_ZIP_NAME="a-ripple-song-podcast.zip" composer run -n build:dist -- "${GITHUB_REF_NAME}"
 
+      - name: Remove old versioned zips
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const tag = context.ref.replace('refs/tags/', '');
+
+            try {
+              const { data: release } = await github.rest.repos.getReleaseByTag({ owner, repo, tag });
+
+              for (const asset of release.assets ?? []) {
+                if (asset.name === 'a-ripple-song-podcast.zip') continue;
+                if (asset.name.startsWith('a-ripple-song-podcast-') && asset.name.endsWith('.zip')) {
+                  core.info(`Deleting asset: ${asset.name}`);
+                  await github.rest.repos.deleteReleaseAsset({ owner, repo, asset_id: asset.id });
+                }
+              }
+            } catch (e) {
+              core.info(`No existing release for tag ${tag} (or unable to fetch).`);
+            }
+
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v2
         with:
